force-app/main/default/objects/Lead/fields/Lead_Owner_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Primary_Business__c</fullName>
    <formula>text(Owner:User.Primary_Business__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Primary Business</label>
    <type>Text</type>
</CustomField>