force-app/main/default/objects/Lead/fields/Lead_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Profile</label>
    <type>Text</type>
</CustomField>