force-app/main/default/objects/Lead/fields/Lead_Owner_Response_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Response_Time_Hours__c</fullName>
    <description>Shows lead owner response time</description>
    <formula>IF( ISBLANK( Lead_Owner_First_Response_Date_Time__c ) , FLOOR((( now()-  Lead_owner_changed_Date_Time__c )*24)), FLOOR((( Lead_Owner_First_Response_Date_Time__c -  Lead_owner_changed_Date_Time__c )*24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner First Response Time (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>