force-app/main/default/objects/Lead/fields/Lead_Owner_Sales_Branch__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Sales_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Branch of the Lead Owner</description>
    <label>Lead Owner Sales Branch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Lead Owner Sales Branch)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>