force-app/main/default/objects/Lead/fields/Lead_Owner_Sales_Director__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Sales_Director__c</fullName>
    <formula>Owner:User.Sales_Director__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Sales Director</label>
    <type>Text</type>
</CustomField>