force-app/main/default/objects/Lead/fields/Lead_Owner_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Status__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Status</label>
    <type>Checkbox</type>
</CustomField>