force-app/main/default/objects/Lead/fields/Lead_Owner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Owner Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>