force-app/main/default/objects/Lead/fields/Lead_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Queue_ID__c</fullName>
    <description>Lead Queue ID</description>
    <formula>casesafeid(Owner:Queue.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Queue ID</label>
    <type>Text</type>
</CustomField>