force-app/main/default/objects/Lead/fields/Lead_Run_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Run_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Run Assignment</label>
    <type>Checkbox</type>
</CustomField>