force-app/main/default/objects/Lead/fields/Lead_Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Lead_Submitted_by__c</fullName>
    <description>Person or process that submitted lead</description>
    <label>Lead Submitted by</label>
    <length>200</length>
    <type>Text</type>
</CustomField>