force-app/main/default/objects/Lead/fields/LeadSourceReference__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceReference__c</fullName>
    <formula>text(LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadSourceReference</label>
    <type>Text</type>
</CustomField>