force-app/main/default/objects/Lead/fields/Length_of_Stay_Months__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay_Months__c</fullName>
    <label>Length of Stay (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>