force-app/main/default/objects/Lead/fields/Lodging_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Lead_Type__c</fullName>
    <description>Indicates type of Lodging Lead</description>
    <label>Lodging Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Lodging</fullName>
            </value>
            <value>
                <fullName>Portable Camps</fullName>
            </value>
            <value>
                <fullName>Drill Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>