force-app/main/default/objects/Lead/fields/Master_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Master_Record_Type__c</fullName>
    <description>Copies record type of Lead</description>
    <formula>$RecordType.Name</formula>
    <label>Master Record Type</label>
    <type>Text</type>
</CustomField>