force-app/main/default/objects/Lead/fields/My_Branch_Lead__c.field-meta.xml
<CustomField>
    <fullName>My_Branch_Lead__c</fullName>
    <description>Indicates lead branch equals user&apos;s sales branch</description>
    <formula>IF(  
or(
Lead_Branch_Code__c =  $User.Sales_Branch__c
, Lead_Branch_Code__c =   $User.Secondary_Sales_Branch__c 
, $Profile.Name = &apos;Integration&apos;
, $Profile.Name = &apos;Salesforce API Only System Integrations&apos;
, $Profile.Name = &apos;Sales Operations&apos;
) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Branch Lead</label>
    <type>Checkbox</type>
</CustomField>