force-app/main/default/objects/Lead/fields/No_of_Beds__c.field-meta.xml
<CustomField>
    <fullName>No_of_Beds__c</fullName>
    <description>Number of Beds</description>
    <label>No. of Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>