force-app/main/default/objects/Lead/fields/No_of_Group_Practice_Members__c.field-meta.xml
<CustomField>
    <fullName>No_of_Group_Practice_Members__c</fullName>
    <description>Number of Group Practice Members(Healthcare)</description>
    <label>No. of Group Practice Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>