force-app/main/default/objects/Lead/fields/No_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Locations__c</fullName>
    <description>Number of Locations(Healthcare)</description>
    <label>No. of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>