force-app/main/default/objects/Lead/fields/Operating_Segment__c.field-meta.xml
<CustomField>
    <fullName>Operating_Segment__c</fullName>
    <description>This field used to select Operating_Segment</description>
    <label>Operating Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operating_Segment</valueSetName>
    </valueSet>
</CustomField>