force-app/main/default/objects/Lead/fields/Owner_Territory__c.field-meta.xml
<CustomField>
    <fullName>Owner_Territory__c</fullName>
    <formula>Owner:User.Territory__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Territory</label>
    <type>Text</type>
</CustomField>