force-app/main/default/objects/Lead/fields/Owner_title__c.field-meta.xml
<CustomField>
    <fullName>Owner_title__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Title</label>
    <type>Text</type>
</CustomField>