force-app/main/default/objects/Lead/fields/Phone_Email__c.field-meta.xml
<CustomField>
    <fullName>Phone_Email__c</fullName>
    <formula>Phone  + &quot;/&quot; +  Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone/Email</label>
    <type>Text</type>
</CustomField>