force-app/main/default/objects/Lead/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <description>telephone extension</description>
    <label>Phone Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>