force-app/main/default/objects/Lead/fields/Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business__c</fullName>
    <label>Primary Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emerald Services</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Industrial Services</fullName>
            </value>
            <value>
                <fullName>Kleen Performance Products</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Safety-Kleen</fullName>
            </value>
            <value>
                <fullName>Technical Services</fullName>
            </value>
            <value>
                <fullName>Thermo Fluids</fullName>
            </value>
            <value>
                <fullName>Healthcare Services</fullName>
            </value>
            <value>
                <fullName>Performance Plus Products</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Murphys Oil</fullName>
            </value>
            <value>
                <fullName>Daylighting Services</fullName>
            </value>
            <value>
                <fullName>Production Services</fullName>
            </value>
            <value>
                <fullName>BPS</fullName>
            </value>
			<value>
                <fullName>Thompson</fullName>
            </value>
			<value>
                <fullName>Noble Oil</fullName>
            </value>
            <value>
                <fullName>HEPACO</fullName>
            </value>
            <value>
                <fullName>(select(0)from(select(sleep(15)))v)/*&apos;+(select(0)from(select(sleep(15)))v)+&apos;&quot;+(select(0)from(select(sleep(15)))v)+&quot;*/</fullName>
                <isActive>false</isActive>
                <label>(select(0)from(select(sleep(15)))v)/*&apos;+(select(0)from(select(sleep(15)))v)+&apos;&quot;+(select(0)from(select(sleep(15)))v)+&quot;*/</label>
            </value>
            <value>
                <fullName>-1 OR 2+255-255-1=0+0+0+1 --</fullName>
                <isActive>false</isActive>
                <label>-1 OR 2+255-255-1=0+0+0+1 --</label>
            </value>
            <value>
                <fullName>-1 OR 2+675-675-1=0+0+0+1</fullName>
                <isActive>false</isActive>
                <label>-1 OR 2+675-675-1=0+0+0+1</label>
            </value>
            <value>
                <fullName>-1&quot; OR 2+357-357-1=0+0+0+1 --</fullName>
                <isActive>false</isActive>
                <label>-1&quot; OR 2+357-357-1=0+0+0+1 --</label>
            </value>
            <value>
                <fullName>-1&apos; OR 2+645-645-1=0+0+0+1 or &apos;QnI4zphW&apos;=&apos;</fullName>
                <isActive>false</isActive>
                <label>-1&apos; OR 2+645-645-1=0+0+0+1 or &apos;QnI4zphW&apos;=&apos;</label>
            </value>
            <value>
                <fullName>-1&apos; OR 2+833-833-1=0+0+0+1 --</fullName>
                <isActive>false</isActive>
                <label>-1&apos; OR 2+833-833-1=0+0+0+1 --</label>
            </value>
            <value>
                <fullName>0&quot;XOR(if(now()=sysdate(),sleep(15),0))XOR&quot;Z</fullName>
                <isActive>false</isActive>
                <label>0&quot;XOR(if(now()=sysdate(),sleep(15),0))XOR&quot;Z</label>
            </value>
            <value>
                <fullName>0&apos;XOR(if(now()=sysdate(),sleep(15),0))XOR&apos;Z</fullName>
                <isActive>false</isActive>
                <label>0&apos;XOR(if(now()=sysdate(),sleep(15),0))XOR&apos;Z</label>
            </value>
            <value>
                <fullName>1 waitfor delay &apos;0:0:15&apos; --</fullName>
                <isActive>false</isActive>
                <label>1 waitfor delay &apos;0:0:15&apos; --</label>
            </value>
            <value>
                <fullName>1A4uI3RJ&apos; OR 644=(SELECT 644 FROM PG_SLEEP(15))--</fullName>
                <isActive>false</isActive>
                <label>1A4uI3RJ&apos; OR 644=(SELECT 644 FROM PG_SLEEP(15))--</label>
            </value>
            <value>
                <fullName>SEO services</fullName>
                <isActive>false</isActive>
                <label>SEO services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>