force-app/main/default/objects/Lead/fields/Primary_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Provider__c</fullName>
    <description>This field used to select primary service provider</description>
    <label>Primary Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Operating_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Primary_Service_Provider</valueSetName>
    </valueSet>
</CustomField>