force-app/main/default/objects/Lead/fields/Probability_of_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Probability_of_Conversion__c</fullName>
    <description>Lead Probability of Conversion to an Opportunity</description>
    <inlineHelpText>Lead Probability of Conversion to an Opportunity</inlineHelpText>
    <label>Probability of Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>