force-app/main/default/objects/Lead/fields/RIT_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>RIT_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Revenue Improvement Team Member assigned to the Lead</description>
    <label>RIT Team Member</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Revenue Improvement Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>