force-app/main/default/objects/Lead/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ditching and Trenching</fullName>
            </value>
            <value>
                <fullName>Pier Holing</fullName>
            </value>
            <value>
                <fullName>Potholing</fullName>
            </value>
            <value>
                <fullName>Chemical Cleaning</fullName>
            </value>
            <value>
                <fullName>Dewatering and Materials Processing</fullName>
            </value>
            <value>
                <fullName>High Pressure Services</fullName>
            </value>
            <value>
                <fullName>Hydro Excavation</fullName>
            </value>
            <value>
                <fullName>Liquid/Dry Vacuum Services</fullName>
            </value>
            <value>
                <fullName>Outage and Turnaround Services</fullName>
            </value>
            <value>
                <fullName>Pigging and Decoking Services</fullName>
            </value>
            <value>
                <fullName>Pipeline Coatings</fullName>
            </value>
            <value>
                <fullName>Ultra Sonic Cleaning Technology</fullName>
            </value>
            <value>
                <fullName>Bulk Waste Disposal</fullName>
            </value>
            <value>
                <fullName>Catalyst Treatment</fullName>
            </value>
            <value>
                <fullName>Drum Waste Disposal</fullName>
            </value>
            <value>
                <fullName>Explosives Management</fullName>
            </value>
            <value>
                <fullName>Fuel Blending</fullName>
            </value>
            <value>
                <fullName>Incineration</fullName>
            </value>
            <value>
                <fullName>Industrial Wastewater Treatment</fullName>
            </value>
            <value>
                <fullName>Landfill</fullName>
            </value>
            <value>
                <fullName>Medical Waste Management and Destruction</fullName>
            </value>
            <value>
                <fullName>Recycling Services</fullName>
            </value>
            <value>
                <fullName>Daylighting &amp; Hydro Excavation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>