force-app/main/default/objects/Lead/fields/Services_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Services_Discussed__c</fullName>
    <label>Services Discussed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>