force-app/main/default/objects/Lead/fields/TA_IIR_ID__c.field-meta.xml
<CustomField>
    <fullName>TA_IIR_ID__c</fullName>
    <description>Turnaround Industrial Info Resources ID</description>
    <label>Turnaround Industrial Info Resources ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>