force-app/main/default/objects/Lead/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory Code</description>
    <label>Territory</label>
    <length>32</length>
    <type>Text</type>
</CustomField>