force-app/main/default/objects/Lead/fields/Territory_Master_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Territory Master ID based off zip code entered on lead</description>
    <label>Territory Master Lookup</label>
    <referenceTo>Territory_Master__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>