force-app/main/default/objects/Lead/fields/Territory_Master_Territory_code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master_Territory_code__c</fullName>
    <formula>Territory_Master_Lookup__r.Territory_code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Master Territory code</label>
    <type>Text</type>
</CustomField>