force-app/main/default/objects/Lead/fields/Territory_Master_Territory_owner__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master_Territory_owner__c</fullName>
    <formula>Territory_Master_Lookup__r.Territory_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Master Territory owner</label>
    <type>Text</type>
</CustomField>