force-app/main/default/objects/Lead/fields/Territory_Owner_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_Owner_Manager_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Owner Manager ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>