force-app/main/default/objects/Lead/fields/Territory_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sales_Manager__c</fullName>
    <formula>Territory_Master_Lookup__r.Territory_ID__r.Sales_Manager__r.User_ID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Sales Manager</label>
    <type>Text</type>
</CustomField>