force-app/main/default/objects/Lead/fields/Unqualified_Notes__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Notes__c</fullName>
    <description>Enter reason lead is unqualified. Required if Unqualified reason is &apos;other&apos;.</description>
    <label>Unqualified Notes</label>
    <type>TextArea</type>
</CustomField>