force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <description>Reason the lead is not qualified</description>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cannot contact</fullName>
            </value>
            <value>
                <fullName>Denied visit</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Other (requires comment)</fullName>
            </value>
            <value>
                <fullName>Out of business</fullName>
            </value>
            <value>
                <fullName>Under competitor contract</fullName>
            </value>
            <value>
                <fullName>Spam/Junk</fullName>
            </value>
            <value>
                <fullName>Not a CH/SK Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>