force-app/main/default/objects/Lead/fields/Waste_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Waste_Data_Source__c</fullName>
    <description>Identify if lead came from waste data source</description>
    <label>Waste Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Axium (Ontario)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>