force-app/main/default/objects/Lead/fields/Website_Capture__c.field-meta.xml
<CustomField>
    <fullName>Website_Capture__c</fullName>
    <label>Website Capture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>