force-app/main/default/objects/Lead/fields/WIN_ID_reference__c.field-meta.xml
<CustomField>
    <fullName>WIN_ID_reference__c</fullName>
    <label>WIN ID reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>