force-app/main/default/objects/Lead/fields/Zip_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Zip_Longitude__c</fullName>
    <formula>ZIP_Master_Lookup__r.Location__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>