force-app/main/default/objects/Lead/fields/ZIP_Master_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Master_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ZIP Master Lookup</description>
    <label>ZIP Master Lookup</label>
    <referenceTo>ZIP_Master__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>