force-app/main/default/objects/Lead/fields/Zip_Trimmed__c.field-meta.xml
<CustomField>
    <fullName>Zip_Trimmed__c</fullName>
    <formula>if(or(len(PostalCode) &lt; 6, len(PostalCode) &gt; 7),left(PostalCode,5),
if(len(PostalCode) = 6 , left(PostalCode,3) + &quot; &quot; + right(PostalCode,3), 
PostalCode)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip Trimmed</label>
    <type>Text</type>
</CustomField>