force-app/main/default/objects/Lead/recordTypes/Call_Center_Lead.recordType-meta.xml
<RecordType>
    <fullName>Call_Center_Lead</fullName>
    <active>true</active>
    <businessProcess>Sales_Lead_Process</businessProcess>
    <description>Call Center created Lead</description>
    <label>Call Center Lead</label>
</RecordType>