force-app/main/default/objects/Lead/recordTypes/Clean_Harbors_Lead.recordType-meta.xml
<RecordType>
    <fullName>Clean_Harbors_Lead</fullName>
    <active>true</active>
    <businessProcess>Sales_Lead_Process</businessProcess>
    <description>Clean Harbors Standard Lead</description>
    <label>Clean Harbors Lead</label>
</RecordType>