force-app/main/default/objects/Lead/recordTypes/Clean_Harbors_Marketing_Lead.recordType-meta.xml
<RecordType>
    <fullName>Clean_Harbors_Marketing_Lead</fullName>
    <active>true</active>
    <businessProcess>Sales_Lead_Process</businessProcess>
    <description>Clean Harbors Marketing Campaign Leads</description>
    <label>Clean Harbors Marketing Lead</label>
</RecordType>