force-app/main/default/objects/Lead/recordTypes/Healthcare_Lead.recordType-meta.xml
<RecordType>
    <fullName>Healthcare_Lead</fullName>
    <active>true</active>
    <businessProcess>Sales_Lead_Process</businessProcess>
    <description>Healthcare Lead Process</description>
    <label>Healthcare Lead</label>
</RecordType>