force-app/main/default/objects/Lead/recordTypes/Oil_Gas_Lead.recordType-meta.xml
<RecordType>
    <fullName>Oil_Gas_Lead</fullName>
    <active>true</active>
    <businessProcess>Sales_Lead_Process</businessProcess>
    <label>Oil &amp; Gas and Lodging Lead</label>
</RecordType>