force-app/main/default/objects/Lead/validationRules/Cannot_assign_to_Exec.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_assign_to_Exec</fullName>
    <active>true</active>
    <errorConditionFormula>and(ISCHANGED(OwnerId)
,   Owner:User.User_ID_18__c == &apos;005j0000000iu8mAAA&apos;)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>You cannot assign the lead to this person. Please check zip or branch coverage for ownership.</errorMessage>
</ValidationRule>