force-app/main/default/objects/Lead/validationRules/OSandPSP_are_Mandatory_when_Converting.validationRule-meta.xml
<ValidationRule>
    <fullName>OSandPSP_are_Mandatory_when_Converting</fullName>
    <active>true</active>
    <description>OS and PSP are mandatory when converting the Lead</description>
    <errorConditionFormula>AND(IsConverted = True,
OR(ISBLANK(Text(Operating_Segment__c)),
ISBLANK(Text(Primary_Service_Provider__c))))</errorConditionFormula>
    <errorMessage>Operating Segment and Primary Service Provider are mandatory when converting Lead.</errorMessage>
</ValidationRule>